# cool-engine

./: CMakeLists.txt  ProPlayerSimulator.sln
ProPlayerSimulator/: ProPlayerSimulator.vcxproj  ProPlayerSimulator.vcxproj.filters  asset_loader.h  assets_loader.cpp  assets_loader.h  camera.cpp  camera.h  font.h  game.cpp  game.h  gl.cpp  gl.h  gui.h  gui_gl.cpp  hero.h  main.cpp  main_screen.h  renderer.h  textured_button.h  textured_rectangle.cpp  textured_rectangle.h  updatable.h
ProPlayerSimulator/libs/: glfw3.lib  libglew32d.lib
demo/gui/: main.cpp
demo/openal/: main.cpp
demo/proplayer/: main.cpp  main_menu.cpp  main_menu.hpp
demo/text_renderer/: main.cpp
demo/triangle/: main.cpp
libs/: freetype.lib
src/: audio.hpp  fixed_texture_atlas.hpp  freetype.cpp  freetype.hpp  gui.hpp  main.cpp  renderable.hpp  renderer.hpp  riff.hpp  text_renderer.hpp  texture_atlas.hpp  unsafe_iostream_operations.hpp  useful_macros.hpp  wav.hpp
src/freetype/: face.cpp  face.hpp  glyph.hpp  library.hpp
src/glfw/: glfw.cpp  window.hpp
src/openal/: al.cpp  al.hpp  alc.cpp  alc.hpp
src/opengl/: bindable.hpp  buffer.cpp  buffer.hpp  context.cpp  context.hpp  core.cpp  core.hpp  debug.cpp  debug.hpp  draw.hpp  gl.cpp  gl.hpp  internal.cpp  internal.hpp  primitive.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  with_name.cpp  with_name.hpp
